优化代码，添加核心用例

--- a/src/main/resources/rattler.properties
+++ b/src/main/resources/rattler.properties
@@ -5,7 +5,7 @@ chain_capture_switch="true"
 upload_url="http://upload.domain.info.com/chain"
 
 #待扫描的服务package名称，目前不支持多package配置【必填】|【链路开关打开必填】
-package_name="com.airfer.rattler"
+package_name="com.airfer.rattler.data"
 
 #在链路开关开启且后端服务启动后，rattler会按照指定的刷新频率刷新收集，单位秒【选填】|【链路开关打开必填】
 # refresh_interval=-1 表示不启动定时刷新
