--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
+                    <!--http://maven.apache.org/surefire/maven-surefire-plugin/examples/class-loading.html-->
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
                     <suiteXmlFiles>
                         <file>
                             src/test/resources/testng.xml
