--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <commons-lang3-version>3.9</commons-lang3-version>
         <assertj-core-verson>3.13.2</assertj-core-verson>
         <commons-csv-version>1.7</commons-csv-version>
+        <guava-retrying-version>2.0.0</guava-retrying-version>
     </properties>
 
     <!--jar包依赖-->
@@ -100,6 +101,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>${commons-csv-version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.rholder/guava-retrying -->
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>${guava-retrying-version}</version>
         </dependency>
     </dependencies>
 
