新增故障自动注入配置项(预留)

--- a/src/main/resources/rattler.properties
+++ b/src/main/resources/rattler.properties
@@ -1,15 +1,18 @@
 #链路上报开关，true开启，false关闭。在线上环境可以选择关闭【必填】
-chain_capture_switch="true"
+chain_capture_switch=true
 
 #链路信息的上送接口，采用post方式进行上送【选填】|【链路开关打开必填】
-upload_url="http://upload.domain.info.com/chain"
+upload_url=http://upload.domain.info.com/chain
 
 #待扫描的服务package名称，目前不支持多package配置【必填】|【链路开关打开必填】
-package_name="com.airfer.rattler.data"
+package_name=com.airfer.rattler.data
 
 #在链路开关开启且后端服务启动后，rattler会按照指定的刷新频率刷新收集，单位秒【选填】|【链路开关打开必填】
 # refresh_interval=-1 表示不启动定时刷新
 refresh_interval=30
 
 #server_id唯一标识一个服务，和美团的appkey是同一个概念【选填】|【链路开关打开必填】
-server_id="airfer_rattler"
+server_id=airfer_rattler
+
+#故障自动注入配置项,故障开关默认关闭
+fault_inject=false
