--- a/src/test/resources/rattler.properties
+++ b/src/test/resources/rattler.properties
@@ -14,3 +14,6 @@ refresh_interval=-1
 
 #server_id唯一标识一个服务，和美团的appkey是同一个概念【选填】|【链路开关打开必填】
 server_id=airfer_rattler_test
+
+#故障自动注入配置项,故障开关默认关闭
+fault_inject=false
