--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.github.airfer</groupId>
     <artifactId>rattler</artifactId>
-    <version>1.0.0</version>
+    <packaging>pom</packaging>
+    <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>rattler-core</module>
+        <module>rattler-sandbox</module>
+    </modules>
 
     <!--jar包属性信息-->
     <properties>
@@ -120,23 +125,6 @@
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
                     <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <!--http://maven.apache.org/surefire/maven-surefire-plugin/examples/class-loading.html-->
-                    <useSystemClassLoader>true</useSystemClassLoader>
-                    <useManifestOnlyJar>false</useManifestOnlyJar>
-                    <suiteXmlFiles>
-                        <file>
-                            src/test/resources/testng.xml
-                        </file>
-                    </suiteXmlFiles>
-                    <parallel>classes</parallel>
-                    <threadCount>1</threadCount>
                 </configuration>
             </plugin>
             <!--plugin for distribution-->
