--- a/rattler-core/src/main/resources/rattler.properties
+++ b/rattler-core/src/main/resources/rattler.properties
@@ -14,5 +14,5 @@ refresh_interval=30
 #server_id唯一标识一个服务，和美团的appkey是同一个概念【选填】|【链路开关打开必填】
 server_id=airfer_rattler
 
-#故障自动注入配置项,故障开关默认关闭
+#故障自动注入配置项,故障开关默认关闭12
 fault_inject=false
