--- a/rattler-api/pom.xml
+++ b/rattler-api/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.github.airfer</groupId>
-    <artifactId>rattler-sandbox</artifactId>
+    <artifactId>rattler-api</artifactId>
 
     <properties>
         <sandbox.version>1.3.1</sandbox.version>
@@ -58,4 +59,5 @@
             <version>1.18.4</version>
         </dependency>
     </dependencies>
+
 </project>
