--- a/rattler-core/src/main/resources/rattler.properties
+++ b/rattler-core/src/main/resources/rattler.properties
@@ -2,6 +2,7 @@
 chain_capture_switch=true
 
 #链路信息的上送接口，采用post方式进行上送【选填】|【链路开关打开必填】
+#upload_url=-1
 upload_url=http://upload.domain.info.com/chain
 
 #待扫描的服务package名称，目前不支持多package配置【必填】|【链路开关打开必填】
